test/fail/tuple_param18.v3
//@seman
def id<T>(x: T) => x;
def x = id(0, 9);
